Bump version to 1.5.2 and update ManaSpark retrieval logic